# EdgeInfer

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  run_demo.sh
demo/: config.json  config.yaml  config_ntcnn.json  main.cpp  ntcnn_squeezenet.cpp
demo/model/: yolov5n.nvt
docs/: add_backend.md  add_model.md
include/: EdgeInfer.h  EdgeInfer.hpp  EdgeInferInternal.h
include/adapters/: base_adapter.h  cvdnn_adapter.h  mnn_adapter.h  ncnn_adapter.h  ntcnn_adapter.h
include/core/: engine.h  factory.h  pipeline.h  postprocess.hpp  preprocess.hpp  processor.h
include/models/: base_model.h  classifier.h  detector.h  recognizer.h
include/processors/: letterbox.h  nms.h  normalize.h  nv12_to_bgr.h  resize.h  softmax.h  yolo_decode.h
include/tools/: json.h  yaml.h
include/types/: config.h  image.h  types.h
src/adapters/: base_adapter.cpp  cvdnn_adapter.cpp  mnn_adapter.cpp  ncnn_adapter.cpp  ntcnn_adapter.cpp
src/api/: EdgeInfer_c.cpp  EdgeInfer_cpp.cpp
src/core/: config_parser.cpp  engine.cpp  pipeline.cpp  processor.cpp
src/processors/: letterbox.cpp  softmax.cpp  yolo_decode.cpp
src/tools/: json.cpp  yaml.cpp
src/types/: image.cpp
